--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,8 @@
         {
             "type": "msedge",
             "request": "launch",
-            "name": "Open index.html",
-            "file": "c:\\Users\\Nicol\\OneDrive\\Escritorio\\FullStack-II Evaluacion-1\\index.html"
+            "name": "Open AdminBlog.html",
+            "file": "c:\\Users\\Nicol\\OneDrive\\Escritorio\\FullStack-II Evaluacion-1\\e-commerce-web-app\\index.html"
         }
     ]
 }
