Integración de vista de inicio de sesión con validación y redirección
- Vista inicioSesion.html actualizada con estructura responsive, navbar y formulario con id="form-login".
- Validación de credenciales simuladas en admin.js usando localStorage.
- Redirección automática a Admin.html si el usuario tiene rol "admin", o a index.html si es "cliente".

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "msedge",
             "request": "launch",
-            "name": "Open AdminBlog.html",
+            "name": "Open index.html",
             "file": "c:\\Users\\Nicol\\OneDrive\\Escritorio\\FullStack-II Evaluacion-1\\e-commerce-web-app\\index.html"
         }
     ]
